--- a/src/datasources/db.datasource.config.json
+++ b/src/datasources/db.datasource.config.json
@@ -2,7 +2,7 @@
   "name": "db",
   "connector": "mysql",
   "url": "",
-  "host": "localhost",
+  "host": "ratingDb",
   "port": 3306,
   "user": "root",
   "password": "1234",
